OPENJPA-952. Committing patch from Rick Curtis
git-svn-id: https://svn.apache.org/repos/asf/openjpa/trunk@780086 13f79535-47bb-0310-9956-ffa450edef68